--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/Index.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/Index.cshtml
@@ -1,11 +1,23 @@
-﻿<!-- /.row -->
+﻿@using LibraryApp.BusinessLayer
+<!-- /.row -->
+
+@{
+    
+    var countCategories = new CategoryManager().GetCategories().Count;
+
+    var countBooks = new BookManager().GetBookList().Count;
+    var countBooksAvailable = new BookManager().GetBookListAvailable().Count;
+
+
+}
+
 <div class="row">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Anasayfa</h1>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6">
+    <div class="col-lg-4 col-md-6">
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <div class="row">
@@ -13,7 +25,7 @@
                         <i class="fa fa-book fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">26</div>
+                        <div class="huge">@countCategories</div>
                         <div>Kategoriler</div>
                     </div>
                 </div>
@@ -28,7 +40,7 @@
             </a>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6">
+    <div class="col-lg-4 col-md-6">
         <div class="panel panel-green">
             <div class="panel-heading">
                 <div class="row">
@@ -36,7 +48,7 @@
                         <i class="fa fa-book fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">12</div>
+                        <div class="huge">@countBooks</div>
                         <div>Kitaplar</div>
                     </div>
                 </div>
@@ -51,7 +63,7 @@
             </a>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6">
+    <div class="col-lg-4 col-md-6">
         <div class="panel panel-yellow">
             <div class="panel-heading">
                 <div class="row">
@@ -59,7 +71,7 @@
                         <i class="fa fa-shopping-cart fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">33</div>
+                        <div class="huge">@countBooksAvailable</div>
                         <div>Müsait Kitaplar</div>
                     </div>
                 </div>
@@ -74,27 +86,5 @@
             </a>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-red">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-support fa-5x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">13</div>
-                        <div>Support Tickets!</div>
-                    </div>
-                </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">Detaylar</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
+   
 </div>
