--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
@@ -119,15 +119,12 @@
 
                         <ul class="dropdown-menu dropdown-user">
                             <li>
-                                <a href="~/User/ShowProfile/@currentUser.Id"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                                <a href="~/User/ShowProfile/@currentUser.Id"><i class="fa fa-user fa-fw"></i>Profilim</a>
                             </li>
                             <li class="divider"></li>
                             <li>
 
-                                <a href="~/Home/LogOut"><i class="fa fa-sign-out fa-fw"></i> LogOut</a>
+                                <a href="~/Home/LogOut"><i class="fa fa-sign-out fa-fw"></i> Çıkış</a>
                             </li>
                         </ul>
                     </li>
