--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Category/AddCategory.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Category/AddCategory.cshtml
@@ -1,35 +1,42 @@
 ﻿@model LibraryApp.Entities.Category
 
-@{
-    ViewBag.Title = "AddCategory";
-}
 
-<h2>AddCategory</h2>
+
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Category</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+   
+    <div class="form-horizontal col-md-6 col-md-offset-3">
+        <div class="row">
+            <div style="height: 5em"></div>
+        </div>
+        <h2>Kategory Ekle</h2>
+        <hr/>
+
+        @Html.ValidationSummary(false, "", new {@class = "text-danger"})
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Name, new {htmlAttributes = new {@class = "form-control"}})
+
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Ekle" class="btn btn-success"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <div>
+                    @Html.ActionLink("Listeye Dön", "Index", null, new {@class = "btn btn-warning"})
+                </div>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
