--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
@@ -16,48 +16,58 @@
                 </div>*@
             <!-- /.panel-heading -->
             <div class="panel-body col-md-6 col-md-offset-3">
-                
-                <div class="input-group">
-   
+
+                @*todo direk kategori ekleyen bir input gelecek*@
+
+                        @*<div class="input-group">
+
 
                     @Html.TextBox("Ekle",null,new {@class= "form-control" ,type="text" })
                     <span class="input-group-btn">
-                        <a class="btn btn-info" type="button" href="">Kitap Ekle</a>
+
+                        @Html.ActionLink("Kategori Ekle","AddCategory","Category",new
+                   { category=new Category()
+                   {
+                       Name = "asdadsaasdasd"
+                   } },new { @class= "btn btn-info", type="text"})
                     </span>
-                </div>
+                </div>*@
                 
+                @*todo direk kategori ekleyen bir input gelecek*@
+                
+
                 <hr />
 
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
-                        <tr>
-                            <th>Kategori Id</th>
-                            <th>Kategori İsim</th>
-                            <th>Kitaplar</th>
-                        </tr>
+                            <tr>
+                                <th>Kategori Id</th>
+                                <th>Kategori İsim</th>
+                                <th>Kitaplar</th>
+                            </tr>
                         </thead>
                         <tbody>
-                        @foreach (var el in Model)
-                        {
-                            <tr class="odd gradeA">
-                                <td>@el.Id</td>
-                                <td>@el.Name</td>
-                                <td>
-                                    <a type="submit" href="~/Home/BookByCategory/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
-                                </td>
-                                <td><a href="~/Category/DeleteCategory/@el.Id" class="btn btn-danger" onclick="confirm('Silmek istediğinize emin misiniz ? ')">Sil</a></td>
-                            </tr>
-                        }
+                            @foreach (var el in Model)
+                            {
+                                <tr class="odd gradeA">
+                                    <td>@el.Id</td>
+                                    <td>@el.Name</td>
+                                    <td>
+                                        <a type="submit" href="~/Home/BookByCategory/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
+                                    </td>
+                                    <td><a href="~/Category/DeleteCategory/@el.Id" class="btn btn-danger" onclick="return confirm('Silmek istediğinize emin misiniz ? ')">Sil</a></td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
                 <!-- /.table-responsive -->
                 @*<div class="well">
-                        <h4>DataTables Usage Information</h4>
-                        <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
-                        <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
-                    </div>*@
+            <h4>DataTables Usage Information</h4>
+            <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
+            <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
+        </div>*@
             </div>
             <!-- /.panel-body -->
         </div>
