--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/User/ShowProfile.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/User/ShowProfile.cshtml
@@ -53,7 +53,7 @@
                                 @counter. Address : @address.Street
                                 No : @address.BuildingNo
                                 @address.District / @address.City
-                                <a href="/Address/RemoveAddressById/@address.Id" class="btn btn-danger btn-sm" onclick="confirm('Are you sure ? ')">Sil</a>
+                                <a href="/Address/RemoveAddressById/@address.Id" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure ? ')">Sil</a>
                             </p>
 
                             @{
@@ -116,7 +116,8 @@
             }
             else
             {
-                <h3><b>Henüz Kitap Kiralamadınız..</b></h3>
+                <h4><b>@Html.ActionLink("Henüz kitap ödünç almadınız.Almak için tıkla ", "BookList","Home",null,new{@class="btn btn-info"})</b></h4>
+
             }
         </div>
         <div class="col-md-2">
