--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/User/ShowProfile.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/User/ShowProfile.cshtml
@@ -122,7 +122,7 @@
         </div>
         <div class="col-md-2">
             <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
                     Ayarlar
                     <span class="caret"></span>
                 </button>
