--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Category/AddCategory.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Category/AddCategory.cshtml
@@ -32,7 +32,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <div>
-                    @Html.ActionLink("Listeye Dön", "Index", null, new {@class = "btn btn-warning"})
+                    @Html.ActionLink("Listeye Dön", "CategoryList", "Home", null, new {@class = "btn btn-warning"})
                 </div>
             </div>
         </div>
