--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/BookByCategory.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/BookByCategory.cshtml
@@ -1,4 +1,5 @@
 ﻿@using LibraryApp.Entities
+@using LibraryApp.WebApp.Models
 @model List<Book>
 
 <div class="row">
@@ -45,17 +46,22 @@
                                         {
                                             var indexOfFirstBlank = @el.Summary.Substring(40, 60)
                                                 .IndexOf(" ", StringComparison.Ordinal);
-                                            <td>@el.Summary.Substring(0, indexOfFirstBlank + 40)..</td>
+
+                                            <td>@string.Concat(@el.Summary.Substring(0, indexOfFirstBlank + 40),"..")</td>
                                         }
-                                        <td>@el.PublishedDate</td>
+                                        else
+                                        {
+                                            <td>@string.Concat(el.Summary, "..")</td>
+                                        }
+                                        <td>@el.PublishedDate.ToShortDateString()</td>
                                         <td>@el.PageCount</td>
                                         <td>@el.Language</td>
                                         @{
-                                            if (el.IsAvailable && Session["login"] != null)
+                                            if (el.IsAvailable && CurrentSession.User != null)
                                             {
                                                 <td><a href="~/Book/RentBookById/@el.Id" class="btn btn-success" onclick="return confirm('Are you sure ?');">Ödünç Al</a></td>
                                             }
-                                            else if (Session["login"] == null)
+                                            else if (CurrentSession.User == null)
                                             {
 
                                             }
