--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/BookList.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/BookList.cshtml
@@ -1,4 +1,5 @@
 ﻿@using LibraryApp.Entities
+@using LibraryApp.WebApp.Models
 @model IEnumerable<LibraryApp.Entities.Book>
 
 <div class="row">
@@ -26,7 +27,6 @@
                                 <th>Kitap Sayfa Sayısı</th>
                                 <th>Kitap Dili</th>
                                 @*<th>Kirala</th>*@
-
                             </tr>
                         </thead>
                         <tbody>
@@ -36,10 +36,10 @@
                                 <td>@el.Id</td>
                                 <td>@el.Name</td>
                                 <td>@el.Author</td>
-                                
+
                                 <!-- todo özet tabledan çıkarıldı -->
                                 @*özetin lengthi 40dan büyükse ve sonu " "  ile bitmiyorsa
-         40-60 arası ilk " "'in indexini al ve, o boşluğa kadar yaz   ,    
+         40-60 arası ilk " "'in indexini al ve, o boşluğa kadar yaz   ,
                                 @if (el.Summary.Length > 40 && el.Summary.Substring(0, 40).EndsWith(" "))
                                 {
                                     <td>@el.Summary.Substring(0, 40)..</td>
@@ -58,13 +58,13 @@
                                 <td>@el.PageCount</td>
                                 <td>@el.Language</td>
                                 @{
-                                    if (el.IsAvailable && Session["login"]!=null)
+                                    if (el.IsAvailable && CurrentSession.User!=null)
                                     {
                                         <td><a href="~/Book/RentBookById/@el.Id" class="btn btn-success" onclick="return confirm('Are you sure ?');">Ödünç Al</a></td>
                                     }
-                                    else if(Session["login"]==null)
+                                    else if(CurrentSession.User==null)
                                     {
-                                        
+
                                     }
                                     else
                                     {
@@ -77,7 +77,7 @@
             <button href="~/Home/Book/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></button>
         </td>*@
                             @{
-                                if (Session["login"] is User currentUser && currentUser.IsAdmin)
+                                if (CurrentSession.User is User currentUser && currentUser.IsAdmin)
                                 {
                                     <td><a class="btn btn-danger" type="submit" href="~/Book/DeleteBook/@el.Id" value="Sil">Sil
                                         <span class="glyphicon glyphicon-remove-sign"></span></a></td>
