--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/BookListAvailable.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/BookListAvailable.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<LibraryApp.Entities.Book>
+﻿@using System.Configuration
+@using LibraryApp.WebApp.Models
+@model IEnumerable<LibraryApp.Entities.Book>
 
 <div class="row">
     <div class="col-lg-12">
@@ -46,17 +48,21 @@
                                     {
                                         var indexOfFirstBlank = @el.Summary.Substring(40, 60)
                                             .IndexOf(" ", StringComparison.Ordinal);
-                                        <td>@el.Summary.Substring(0, indexOfFirstBlank + 40)..</td>
+                                        <td>@string.Concat(@el.Summary.Substring(0, indexOfFirstBlank + 40),"..")</td>
+                                    }
+                                    else
+                                    {
+                                        <td>@string.Concat(el.Summary,"..")</td>
                                     }
                                     <td>@el.PublishedDate</td>
                                     <td>@el.PageCount</td>
                                     <td>@el.Language</td>
                                     @{
-                                        if (el.IsAvailable && Session["login"] != null)
+                                        if (el.IsAvailable && CurrentSession.User != null)
                                         {
                                             <td><a href="~/Book/RentBookById/@el.Id" class="btn btn-success" onclick="return confirm('Are you sure ?');">Ödünç Al</a></td>
                                         }
-                                        else if (Session["login"] == null)
+                                        else if (CurrentSession.User == null)
                                         {
 
                                         }
