--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
@@ -1,5 +1,6 @@
 ﻿@using LibraryApp.BusinessLayer
 @using LibraryApp.Entities
+@using LibraryApp.WebApp.Models
 @model List<Category>
 
 <div class="row">
@@ -19,22 +20,20 @@
 
                 @*todo direk kategori ekleyen bir input gelecek*@
 
-                        @*<div class="input-group">
+                @*<div class="input-group">
 
+                        @Html.TextBox("Ekle",null,new {@class= "form-control" ,type="text" })
+                        <span class="input-group-btn">
 
-                    @Html.TextBox("Ekle",null,new {@class= "form-control" ,type="text" })
-                    <span class="input-group-btn">
+                            @Html.ActionLink("Kategori Ekle","AddCategory","Category",new
+                       { category=new Category()
+                       {
+                           Name = "asdadsaasdasd"
+                       } },new { @class= "btn btn-info", type="text"})
+                        </span>
+                    </div>*@
 
-                        @Html.ActionLink("Kategori Ekle","AddCategory","Category",new
-                   { category=new Category()
-                   {
-                       Name = "asdadsaasdasd"
-                   } },new { @class= "btn btn-info", type="text"})
-                    </span>
-                </div>*@
-                
                 @*todo direk kategori ekleyen bir input gelecek*@
-                
 
                 <hr />
 
@@ -56,7 +55,10 @@
                                     <td>
                                         <a type="submit" href="~/Home/BookByCategory/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
                                     </td>
+                                    @if (CurrentSession.User!=null && CurrentSession.User.IsAdmin)
+                                    {
                                     <td><a href="~/Category/DeleteCategory/@el.Id" class="btn btn-danger" onclick="return confirm('Silmek istediğinize emin misiniz ? ')">Sil</a></td>
+                                    }
                                 </tr>
                             }
                         </tbody>
@@ -64,10 +66,10 @@
                 </div>
                 <!-- /.table-responsive -->
                 @*<div class="well">
-            <h4>DataTables Usage Information</h4>
-            <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
-            <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
-        </div>*@
+                        <h4>DataTables Usage Information</h4>
+                        <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
+                        <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
+                    </div>*@
             </div>
             <!-- /.panel-body -->
         </div>
